2008-08-27  Stephen Deasey <sdeasey@users.sf.net>

	* include/nsconfig.h.in: Remove autogenerated file.

	* nsd/tcltime.c: Use simple pointer copying inplace of memcpy.

2008-08-27  Vlad Seryakov <seryakov@users.sf.net>

        * nsdb/nsdb.h:
        * nsdb/dbdrv.c: Added new API call rowcount and function Ns_DbGetRowCount to return
        number of affected rows by last SQL statement. All driver have this call implemented
        differently and it will not break old application but new code can use it

2008-08-27  Vlad Seryakov <seryakov@users.sf.net>

        * nsd/driver.c:
        * nsd/nsd.h: Restructured driver polling code, use PollData structure to keep all
        poll-related fields together.

2008-08-26  Vlad Seryakov <seryakov@users.sf.net>

        * nsd/nsd.h:
        * nsd/driver.c: Port some driver code from Aolserver 4.5 into our
        driver structure such as:
         - create separate thread for each driver
         - have driver thread to create and shutdown its sockets and
           writer/spooler threads

        I made many tests comparing AS 4.5 driver and our based on 4.0.11 driver
        and every time is see old code is more stable and fatser. New AS 4.5 driver
        logic seems very complicated and with pretty heavy tests it even fails to sustain
        the load. My latest test with LiteSpeed Web server which claims to be even faster
        than lighttpd shows that for simple small files with fastpath enabled we perform almost
        the same as LiteSpeed, a little bit slower but not much. Having separate threads for
        each driver made it a tiny little bit faster which just proves that it is not bad to
        have each driver in different threads.

        * nsd/tcltime.c: Fixed the bug introduced earlier by using memcpy for silencing
        compiler warnings

2008-08-24  Vlad Seryakov <seryakov@users.sf.net>

        * nsd/nsd.h:
        * nsd/driver.c: Make sure WriterThread honors keep-alive flag when