@@ -1030,7 +1030,7 @@ LogOpen(void)
 {
     int fd, status = NS_OK;
 
-    fd = open(file, O_WRONLY|O_APPEND|O_CREAT|O_LARGEFILE, 0644);
+    fd = open(file, O_WRONLY | O_APPEND | O_CREAT, 0644);
     if (fd == -1) {
     	Ns_Log(Error, "log: failed to re-open log file '%s': '%s'",
                file, strerror(errno));
